--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     </div>
                     <div class="slideshow">
                         <div class=slideContainer>
-                            <img class="slides" src="/HW19/IMAGES/Group 2.png" style="width:100%">
-                            <img class="slides" src="/HW19/IMAGES/Group 3.png" style="width:100%">
-                            <img class="slides" src="/HW19/IMAGES/Group 34.png" style="width:100%">
+                            <img class="slides fade" src="/HW19/IMAGES/Group 2.png" style="width:100%">
+                            <img class="slides fade" src="/HW19/IMAGES/Group 3.png" style="width:100%">
+                            <img class="slides fade" src="/HW19/IMAGES/Group 34.png" style="width:100%">
                             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                             <a class="next" onclick="plusSlides(1)">&#10095;</a>
                         </div>
